# nexen_robot

./: README.md
diffdrive_arduino/: README.md
diffdrive_arduino/controllers/: robot_controller_example.yaml
diffdrive_arduino/include/diffdrive_arduino/: config.h
diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp  diffdrive_robot.cpp
nexen/: CMakeLists.txt  README.md  package.xml
nexen/launch/: cs20.launch.py
nexen/src/: CMakeList.txt  align.cpp  image_cs.cpp  pointcloud.cpp  render.h  rgb.cpp
nexen_bot/: CMakeLists.txt  package.xml
nexen_bot/config/: mapper_params_online_async.yaml  my_controllers.yaml
nexen_bot/description/: gazebo_control.xacro  robot_core.xacro  ros2_control.xacro
nexen_bot/launch/: ball_tracker.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
synexens_package/include/synexens_package/: synexens_calibration_transform_data.h
synexens_package/launch/: driver_launch.py  viewer_launch.py
synexens_package/src/: synexens_calibration_transform_data.cpp
