<?xml version="1.0"?>
<package format="3">
  <name>cs20_ros</name>
  <version>1.10.0</version>
  <description>depth</description>

  <maintainer email="eaeaea7@gmail.com">CS20</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <!-- <build_depend>rosconsole</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>

  <build_depend>cv_bridge</build_depend>

  <exec_depend>cv_bridge</exec_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <exec_depend>rclcpp</exec_depend>
  <!-- <exec_depend>rosconsole</exec_depend> -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>